# This CMakeFile is used con create libdevice(.lib / .a)

SET(HARD_LAB ${CMAKE_SOURCE_DIR}/hardlab)
#MESSAGE( STATUS ${HARD_LAB} )

IF(USE_HAPTIC)
  FIND_PACKAGE( OpenHaptics )
  IF( OPENHAPTICS_FOUND )
      INCLUDE_DIRECTORIES( ${OPENHAPTICS_INCLUDE_DIR} )
      SET( DEVICE_EXTRA_LIBS ${OPENHAPTICS_LIBRARIES} )
      SET( HARDLAB_SRC_FILES ${HARD_LAB}/haptic/haptic.cpp )
      SET( HARDLAB_HDR_FILES ${HARD_LAB}/haptic/haptic.h )
      ADD_DEFINITIONS( -DKAUTHAM_USE_OPENHAPTICS )
      LINK_DIRECTORIES( ${OPENHAPTICS_LIBRARIES_DIR} )
  ENDIF( OPENHAPTICS_FOUND )
ENDIF( USE_HAPTIC )

INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/libmt 
                     ${HARD_LAB} 
                     ${CMAKE_SOURCE_DIR} )

LINK_DIRECTORIES( ${Boost_LIBRARY_DIRS}  ${CMAKE_SOURCE_DIR})

SET( Boost_USE_MULTITHREADED ON )

FILE( GLOB SRC_FILES *.cpp )
FILE( GLOB HDR_FILES *.h )
FILE( GLOB QT_SRC *.h )

QT4_WRAP_CPP( QT_MOC_SRC ${QT_SRC} )

ADD_LIBRARY( libdevice ${SRC_FILES} ${HDR_FILES} ${QT_MOC_SRC} ${HARDLAB_SRC_FILES} ${HARDLAB_HDR_FILES} )
TARGET_LINK_LIBRARIES( libdevice ${QT_CORE_LIBRARY} ${Boost_LIBRARIES} ${DEVICE_EXTRA_LIBS} )

IF( UNIX )
  SET_TARGET_PROPERTIES( libdevice PROPERTIES OUTPUT_NAME device )
ENDIF(UNIX)

